--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -58,7 +58,7 @@ spring:
 
   datasource:
     driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost/rsmortgage
+    url: jdbc:mysql://localhost:3306/rsmortgage
     username: root
     password: root
 
